--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -360,7 +360,7 @@
     <string name="lbl_number">Aantal</string>
     <string name="lbl_owned">In bezit</string>
     <string name="lbl_pages">Pagina’s</string>
-    <string name="lbl_personal_notes">Aantekeningen</string>
+    <string name="lbl_personal_notes">Opmerkingen</string>
     <string name="lbl_price_listed">Lijstprijs</string>
     <string name="lbl_price_paid">Betaald</string>
     <string name="lbl_print_run">Oplage</string>
