--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -776,4 +776,5 @@
     <string name="pt_enable_extra_logging">Ενεργοποίηση πρόσθετης καταγραφής</string>
     <string name="lbl_troubleshooting_warning">Παρακαλούμε μην ενεργοποιείτε τις παρακάτω επιλογές, εκτός αν σας ζητηθεί ρητά από τον προγραμματιστή της εφαρμογής.</string>
     <string name="info_tap_to_select">Πατήστε για να επιλέξετε.</string>
+    <string name="lbl_tab_alternative_editions_long">Εναλλακτικές εκδόσεις</string>
 </resources>
