--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -412,7 +412,7 @@
     <string name="lbl_styles">Stili</string>
     <string name="lbl_styles_long">Stile della libreria</string>
     <string name="lbl_sync_date">Da quando</string>
-    <string name="lbl_tab_alternative_editions">Edizioni alt.</string>
+    <string name="lbl_tab_alternative_editions">Edi. alt.</string>
     <string name="lbl_tab_details">Dettagli</string>
     <string name="lbl_tab_lbl_ext_id">ID esterno</string>
     <string name="lbl_tab_notes">Note</string>
@@ -779,4 +779,5 @@
     <string name="pt_enable_extra_logging">Abilitare la registrazione aggiuntiva</string>
     <string name="lbl_troubleshooting_warning">Non abilitare le opzioni seguenti, a meno che non siano state esplicitamente richieste dallo sviluppatore dell\'applicazione.</string>
     <string name="info_tap_to_select">Toccare per selezionare.</string>
+    <string name="lbl_tab_alternative_editions_long">Edizioni alternative</string>
 </resources>
